syntax = "proto3";

option csharp_namespace = "Admin.Server";

package User;

service UserAdmin {
  rpc GetUserInfo (UserRequest) returns (UserReply);
}

message UserRequest {
  int32 id = 1;
}

message UserReply {
  int32 id = 1;
  string name = 2;
}
